repair schemahint, AiSericeImpl